and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov 30th, 2013 Alex Howard (procbiasing-V09-06-18)
    - Moved static methods in the initialiser to the body for G4GeometrySampler
      and G4ImportanceConfigurator

Nov 30th, 2013 Alex Howard (procbiasing-V09-06-17)
    - Fixed coverity errors (uninitialised variables), 
      EXCEPT for fGhostStep in G4ImportanceProcess, G4WeightWindowProcess
      and G4WeightCutOffProcess

Nov 29th, 2013 Alex Howard (procbiasing-V09-06-16)
    - Put back RemoveProcess for both G4WeightWindowConfigurator and 
      G4ImportanceConfigurator - makes test33 work.

Nov 28th, 2013 Marc Verderi (procbiasing-V09-06-15)
    - include license/disclaimer in headers in generic and management
    - include comments and description
    - change G4cout in G4Exception when appropriate

Nov 28th, 2013 Alex Howard (procbiasing-V09-06-14)
    - Put back RemoveProcess for G4WeightCutOffConfigurator since it is not
      associated with a store singleton.

Nov 26th, 2013 Alex Howard (procbiasing-V09-06-13)
    - Fixing history file for actual tag names - which have probiasing instead
      of procbiasing!!

Nov 24th, 2013 Alex Howard (procbiasing-V09-06-12)
    - Fixed segmentation fault in mass only case (deleted non-existent objects)

Nov 24th, 2013 Alex Howard (probiasing-V09-06-11)
    - Fixed segmentation fault at the end of an MT run
    - caused by deleting fGhostStep in the destructor
    - removed RemoveProcess from the destructor (ClearSampling) of configurators
    - also caused an out of range index with MT

Nov 22nd, 2013 Alex Howard (probiasing-V09-06-10)
    - Included guard for single threaded backward compatability