@@ -56,7 +56,7 @@ class G4VTouchable;
 
 #include "G4FieldTrack.hh"
 #include "G4TouchableHandle.hh"
-
+#include "G4MultiNavigator.hh"   // For ELimited enum
 
 class G4ImportanceProcess : public G4VProcess, public G4VTrackTerminator
 {
@@ -74,10 +74,10 @@ public:  // with description
 
 
   //--------------------------------------------------------------
-  // Set Paralle World
+  // Set Parallel World
   //--------------------------------------------------------------
 
-  void SetParallelWorld(G4String parallelWorldName);
+  void SetParallelWorld(const G4String &parallelWorldName);
   //  void SetParallelWorld(const G4VPhysicalVolume* parallelWorld);
 
   //--------------------------------------------------------------
@@ -156,7 +156,9 @@ private:
   G4double             fGhostSafety;
   G4bool               fOnBoundary;
 
-  G4bool               paraflag;
+  G4bool               fParaflag;
+  G4FieldTrack         fEndTrack;
+  ELimited             feLimited;
 
 };
 
