@@ -63,8 +63,7 @@ G4ImportanceProcess(const G4VImportanceAlgorithm &aImportanceAlgorithm,
    fPostStepAction(0),
    fGhostWorldName("NoParallelWorld"),fGhostWorld(0),
    fGhostNavigator(0), fNavigatorID(-1), fFieldTrack('0'),
-   paraflag(para)
-  
+   fParaflag(para), fEndTrack('0'), feLimited(kDoNot)  
 {
   G4cout << G4endl << G4endl << G4endl;
   G4cout << "G4ImportanceProcess:: Creating " << G4endl;
@@ -97,7 +96,7 @@ G4ImportanceProcess(const G4VImportanceAlgorithm &aImportanceAlgorithm,
     G4cout << GetProcessName() << " is created " << G4endl;
   }
 
-  G4cout << "G4ImportanceProcess:: importance process paraflag is: " << paraflag << G4endl;
+  G4cout << "G4ImportanceProcess:: importance process paraflag is: " << fParaflag << G4endl;
 
 }
 
@@ -120,7 +119,7 @@ G4ImportanceProcess::~G4ImportanceProcess()
 //
 //------------------------------------------------------
 void G4ImportanceProcess::
-SetParallelWorld(G4String parallelWorldName)
+SetParallelWorld(const G4String &parallelWorldName)
 {
   G4cout << G4endl << G4endl << G4endl;
   G4cout << "G4ImportanceProcess:: SetParallelWorld name = " << parallelWorldName << G4endl;
@@ -161,7 +160,7 @@ void G4ImportanceProcess::StartTracking(G4Track* trk)
 //++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 // G4cout << " G4ParallelWorldScoringProcess::StartTracking" << G4endl;
 
-  if(paraflag) {
+  if(fParaflag) {
     if(fGhostNavigator)
       { fNavigatorID = fTransportationManager->ActivateNavigator(fGhostNavigator); }
     else
@@ -214,7 +213,7 @@ G4ImportanceProcess::PostStepDoIt(const G4Track &aTrack,
 {
   fParticleChange->Initialize(aTrack);
 
-  if(paraflag) {
+  if(fParaflag) {
     fOldGhostTouchable = fGhostPostStepPoint->GetTouchableHandle();
     //xbug?    fOnBoundary = false;
     CopyStep(aStep);
@@ -359,13 +358,7 @@ AlongStepGetPhysicalInteractionLength(
             const G4Track& track, G4double  previousStepSize, G4double  currentMinimumStep,
             G4double& proposedSafety, G4GPILSelection* selection)
 {
-
-  //AH  G4cout << " along step physical interaction length " << G4endl;
-
-  if(paraflag) {
-    static G4ThreadLocal G4FieldTrack *endTrack_G4MT_TLS_ = 0 ; if (!endTrack_G4MT_TLS_) endTrack_G4MT_TLS_ = new  G4FieldTrack ('0') ;  G4FieldTrack &endTrack = *endTrack_G4MT_TLS_;
-    static G4ThreadLocal ELimited *eLimited_G4MT_TLS_ = 0 ; if (!eLimited_G4MT_TLS_) eLimited_G4MT_TLS_ = new  ELimited  ;  ELimited &eLimited = *eLimited_G4MT_TLS_;
-    
+  if(fParaflag) {    
     *selection = NotCandidateForSelection;
     G4double returnedStep = DBL_MAX;
     
@@ -394,15 +387,15 @@ AlongStepGetPhysicalInteractionLength(
 	//++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 	returnedStep
 	  = fPathFinder->ComputeStep(fFieldTrack,currentMinimumStep,fNavigatorID,
-				     track.GetCurrentStepNumber(),fGhostSafety,eLimited,
-				     endTrack,track.GetVolume());
+				     track.GetCurrentStepNumber(),fGhostSafety,feLimited,
+				     fEndTrack,track.GetVolume());
 	//++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-	if(eLimited == kDoNot)
+	if(feLimited == kDoNot)
 	  {
 	    //AH	    G4cout << " computestep came back with not-boundary " << G4endl;
 	    // Track is not on the boundary
 	    fOnBoundary = false;
-	    fGhostSafety = fGhostNavigator->ComputeSafety(endTrack.GetPosition());
+	    fGhostSafety = fGhostNavigator->ComputeSafety(fEndTrack.GetPosition());
 	  }
 	else
 	  {
@@ -412,9 +405,9 @@ AlongStepGetPhysicalInteractionLength(
 	    // proposedSafety = fGhostSafety;
 	  }
 	proposedSafety = fGhostSafety;
-	if(eLimited == kUnique || eLimited == kSharedOther) {
+	if(feLimited == kUnique || feLimited == kSharedOther) {
 	  *selection = CandidateForSelection;
-	}else if (eLimited == kSharedTransport) { 
+	}else if (feLimited == kSharedTransport) { 
 	  returnedStep *= (1.0 + 1.0e-9);  
 	  // Expand to disable its selection in Step Manager comparison
 	}
