@@ -66,7 +66,8 @@ G4WeightCutOffProcess(G4double wsurvival,
     fIStore(istore),
     //    fGCellFinder(aGCellFinder),
     fGhostWorldName("NoParallelWorld"), fGhostWorld(0),
-    fGhostNavigator(0), fNavigatorID(-1), fFieldTrack('0')
+    fGhostNavigator(0), fNavigatorID(-1), fFieldTrack('0'),
+    fParaflag(para), fEndTrack('0'), feLimited(kDoNot)
 {
   if (!fParticleChange)
   {
@@ -88,9 +89,6 @@ G4WeightCutOffProcess(G4double wsurvival,
   {
     G4cout << GetProcessName() << " is created " << G4endl;
   }
-
-  paraflag = para;
-
 }
 
 G4WeightCutOffProcess::~G4WeightCutOffProcess()
@@ -106,7 +104,7 @@ G4WeightCutOffProcess::~G4WeightCutOffProcess()
 //
 //------------------------------------------------------
 void G4WeightCutOffProcess::
-SetParallelWorld(G4String parallelWorldName)
+SetParallelWorld(const G4String &parallelWorldName)
 {
 //++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 // Get pointers of the parallel world and its navigator
@@ -141,7 +139,7 @@ void G4WeightCutOffProcess::StartTracking(G4Track* trk)
 //++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 // G4cout << " G4ParallelWorldScoringProcess::StartTracking" << G4endl;
 
-  if(paraflag) {
+  if(fParaflag) {
     if(fGhostNavigator)
       { fNavigatorID = fTransportationManager->ActivateNavigator(fGhostNavigator); }
     else
@@ -192,7 +190,7 @@ G4WeightCutOffProcess::PostStepDoIt(const G4Track& aTrack,
 {
   fParticleChange->Initialize(aTrack);
 
-  if(paraflag) {
+  if(fParaflag) {
     fOldGhostTouchable = fGhostPostStepPoint->GetTouchableHandle();
     //xbug?    fOnBoundary = false;
     CopyStep(aStep);
@@ -224,7 +222,7 @@ G4WeightCutOffProcess::PostStepDoIt(const G4Track& aTrack,
 
   }
 
-  if(paraflag) {
+  if(fParaflag) {
     G4GeometryCell postCell(*(fGhostPostStepPoint->GetPhysicalVolume()), 
 			    fGhostPostStepPoint->GetTouchable()->GetReplicaNumber());
 
@@ -300,9 +298,7 @@ AlongStepGetPhysicalInteractionLength(
             const G4Track& track, G4double  previousStepSize, G4double  currentMinimumStep,
             G4double& proposedSafety, G4GPILSelection* selection)
 {
-  if(paraflag) {
-    static G4ThreadLocal G4FieldTrack *endTrack_G4MT_TLS_ = 0 ; if (!endTrack_G4MT_TLS_) endTrack_G4MT_TLS_ = new  G4FieldTrack ('0') ;  G4FieldTrack &endTrack = *endTrack_G4MT_TLS_;
-    static G4ThreadLocal ELimited *eLimited_G4MT_TLS_ = 0 ; if (!eLimited_G4MT_TLS_) eLimited_G4MT_TLS_ = new  ELimited  ;  ELimited &eLimited = *eLimited_G4MT_TLS_;
+  if(fParaflag) {
     
     *selection = NotCandidateForSelection;
     G4double returnedStep = DBL_MAX;
@@ -331,14 +327,14 @@ AlongStepGetPhysicalInteractionLength(
 	//++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 	returnedStep
 	  = fPathFinder->ComputeStep(fFieldTrack,currentMinimumStep,fNavigatorID,
-				     track.GetCurrentStepNumber(),fGhostSafety,eLimited,
-				     endTrack,track.GetVolume());
+				     track.GetCurrentStepNumber(),fGhostSafety,feLimited,
+				     fEndTrack,track.GetVolume());
 	//++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-	if(eLimited == kDoNot)
+	if(feLimited == kDoNot)
 	  {
 	    // Track is not on the boundary
 	    fOnBoundary = false;
-	    fGhostSafety = fGhostNavigator->ComputeSafety(endTrack.GetPosition());
+	    fGhostSafety = fGhostNavigator->ComputeSafety(fEndTrack.GetPosition());
 	  }
 	else
 	  {
@@ -347,9 +343,9 @@ AlongStepGetPhysicalInteractionLength(
 	    proposedSafety = fGhostSafety;
 	  }
 	//xbug?	proposedSafety = fGhostSafety;
-	if(eLimited == kUnique || eLimited == kSharedOther) {
+	if(feLimited == kUnique || feLimited == kSharedOther) {
 	  *selection = CandidateForSelection;
-	}else if (eLimited == kSharedTransport) { 
+	}else if (feLimited == kSharedTransport) { 
 	  returnedStep *= (1.0 + 1.0e-9);  
 	  // Expand to disable its selection in Step Manager comparison
 	}
