@@ -17,6 +17,17 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+March 10th, 2015  G.Cosmo
+- G4ImportanceProcess, G4WeightCutOffProcess: made static thread-local
+  variables into class data members.
+  Renamed them accordingly: fEndTrack, feLimited, fParaflag.
+- Use const reference for string in argument in SetParallelWorld() in
+  G4ImportanceProcess, G4WeithCutOffProcess and G4WeightWindowProcess.
+
+February 12th, 2015  J.Apostolakis
+- G4WeightWindowProcess: made static thread-local variables into class
+  data members. Renamed them accordingly: fEndTrack, feLimited, fParaflag.
+
 December 2nd, 2013  A.Howard
 - Moved static methods in the initialiser to the body for G4GeometrySampler
   and G4ImportanceConfigurator
