@@ -17,6 +17,12 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+Mar 10th, 2015 Gabriele Cosmo (procbiasing-V09-06-19)
+- G4ImportanceProcess, G4WeightCutOffProcess, G4WeightWindowProcess: made
+  static thread-local variables into class data members.
+  Renamed them accordingly: fEndTrack, feLimited, fParaflag.
+  Use const reference for string in argument in SetParallelWorld().
+
 Nov 30th, 2013 Alex Howard (procbiasing-V09-06-18)
     - Moved static methods in the initialiser to the body for G4GeometrySampler
       and G4ImportanceConfigurator
